; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/tsearch/extr_ts_typanalyze.c_trackitem_compare_lexemes.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/tsearch/extr_ts_typanalyze.c_trackitem_compare_lexemes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @trackitem_compare_lexemes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @trackitem_compare_lexemes(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_2__**, align 8
  %6 = alloca %struct.TYPE_2__**, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.TYPE_2__**
  store %struct.TYPE_2__** %8, %struct.TYPE_2__*** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.TYPE_2__**
  store %struct.TYPE_2__** %10, %struct.TYPE_2__*** %6, align 8
  %11 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %5, align 8
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %6, align 8
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = call i32 @lexeme_compare(i32* %13, i32* %16)
  ret i32 %17
}

declare dso_local i32 @lexeme_compare(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
